--- a/app/src/main/res/layout/fragment_current_task.xml
+++ b/app/src/main/res/layout/fragment_current_task.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.chernenkovit.tasker.fragment.CurrentTaskFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvCurrentTasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Current task" />
+        android:clipToPadding="false"
+        android:paddingBottom="88dp"
+        android:scrollbars="vertical" />
 
 </FrameLayout>
