--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -57,5 +57,14 @@
                 android:inputType="none"
                 android:textSize="16sp" />
         </android.support.design.widget.TextInputLayout>
+
+        <Spinner
+            android:id="@+id/spDialogTaskPriority"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tilDialogTaskDate"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin" />
     </RelativeLayout>
 </ScrollView>
