--- a/app/src/main/res/layout/fragment_done_task.xml
+++ b/app/src/main/res/layout/fragment_done_task.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chernenkovit.tasker.fragment.DoneTaskFragment">
+    tools:context="com.chernenkovit.tasker.fragment.DoneTaskFragment"
+    android:background="@color/gray_50">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvDoneTasks"
