--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,12 +9,12 @@
         android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.chernenkovit.tasker.MainActivity">
+        tools:context=".MainActivity">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <android.support.design.widget.AppBarLayout
@@ -27,7 +26,16 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_scrollFlags="scroll|enterAlways" />
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <android.support.v7.widget.SearchView
+                    android:id="@+id/search_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    app:searchIcon="@drawable/ic_search_white_24dp"
+                    app:theme="@style/Theme.AppCompat.NoActionBar" />
+            </android.support.v7.widget.Toolbar>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
@@ -37,6 +45,7 @@
                 app:tabIndicatorColor="@android:color/background_light"
                 app:tabSelectedTextColor="@android:color/background_light"
                 app:tabTextColor="@android:color/background_light" />
+
         </android.support.design.widget.AppBarLayout>
 
         <android.support.design.widget.FloatingActionButton
@@ -48,5 +57,7 @@
             app:layout_anchor="@id/view_pager"
             app:layout_anchorGravity="bottom|right|end" />
 
+
     </android.support.design.widget.CoordinatorLayout>
+
 </FrameLayout>
