--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#00796B</color>
+    <color name="colorPrimary">#2196F3</color> //blue 500
+    <color name="colorPrimaryDark">#1976D2</color> //blue 700
+    <color name="colorAccent">#1976D2</color> //blue 700
 
     <color name="white">#FFFFFF</color>
 
